--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,10 @@
     @apply p-4
   }
 
-  /* button {
-    @apply text-white border bg-indigo-600 border-indigo-600 hover: bg-transparent hover:text-indigo-600 rounded-md
-  } */
+  /* prettier-ignore */
+  button {
+    @apply text-white border bg-indigo-600 border-indigo-600
+  }
 
   ul {
     padding: 0;
@@ -20,8 +21,10 @@
   .line-break {
     white-space: pre-wrap;
   }
-
 }
+
+
+
 
 
 
