--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,13 @@
     @apply p-4
   }
 
-  /* prettier-ignore */
   button {
-    @apply text-white border bg-indigo-600 border-indigo-600
+    @apply text-white border bg-indigo-600 border-indigo-600 rounded-md
   }
+
+  /* button {
+    @apply text-white border bg-indigo-600 border-indigo-600 hover: bg-transparent hover:text-indigo-600 rounded-md
+  } */
 
   ul {
     padding: 0;
